--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,16 @@
       <input type="password" name="password" />
       <button name="button" type="submit">Login</button>
     </form>
+
+    <!-- ЗАДАЧА 2 -->
+    <h2>Задача 2</h2>
+    <form class="task-form">
+      <input type="text" name="taskName" />
+      <button type="submit">Add task</button>
+    </form>
+
+    <ul id="task-list"></ul>
+
     <script type="module" src="./main.js"></script>
   </body>
 </html>
