feat: fetch, class-api

--- a/src/index.html
+++ b/src/index.html
@@ -9,30 +9,41 @@
 	</head>
 
 	<body class="light">
-		<p class="date">Current data and time: <span></span></p>
+		<!-- <p class="date">Current data and time: <span></span></p> -->
 		<!-- ЗАДАЧА 1 -->
-		<h2>Задача 1</h2>
+		<!-- <h2>Задача 1</h2>
 		<form class="login-form">
 			<input type="email" name="email" />
 			<input type="password" name="password" />
 			<button name="button" type="submit">Login</button>
-		</form>
+		</form> -->
 
 		<!-- ЗАДАЧА 2 -->
-		<h2>Задача 2</h2>
+		<!-- <h2>Задача 2</h2>
 		<form class="task-form">
 			<input type="text" name="taskName" />
 			<button type="submit">Add task</button>
-		</form>
-
+		</form> -->
+		<!-- 
 		<div class="checkbox-thumb">
 			<input type="checkbox" id="checkbox" class="checkbox" />
 			<label class="theme-toggle" for="checkbox"></label>
 			<div class="checkbox-circle"></div>
-		</div>
+		</div> -->
 
-		<ul id="task-list"></ul>
+		<!-- <ul id="task-list"></ul> -->
 
-		<script type="module" src="./main.js"></script>
+		<section class="gallery-section">
+			<div class="container">
+				<form class="search-form js-search-form">
+					<input type="text" name="query" class="search-input" />
+					<button type="submit" class="search-btn">Search</button>
+				</form>
+				<ul class="gallery"></ul>
+			</div>
+		</section>
+
+		<!-- <script type="module" src="./main.js"></script> -->
+		<script type="module" src="./js/gallery.js"></script>
 	</body>
 </html>
