--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Blended-js</title>
-		<link rel="stylesheet" href="./css/styles.css" />
-	</head>
 
-	<body class="light">
-		<!-- <p class="date">Current data and time: <span></span></p> -->
-		<!-- ЗАДАЧА 1 -->
-		<!-- <h2>Задача 1</h2>
+<head>
+	<meta charset="UTF-8" />
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Blended-js</title>
+	<link rel="stylesheet" href="./css/styles.css" />
+</head>
+
+<body class="light">
+	<!-- <p class="date">Current data and time: <span></span></p> -->
+	<!-- ЗАДАЧА 1 -->
+	<!-- <h2>Задача 1</h2>
 		<form class="login-form">
 			<input type="email" name="email" />
 			<input type="password" name="password" />
 			<button name="button" type="submit">Login</button>
 		</form> -->
 
-		<!-- ЗАДАЧА 2 -->
-		<!-- <h2>Задача 2</h2>
+	<!-- ЗАДАЧА 2 -->
+	<!-- <h2>Задача 2</h2>
 		<form class="task-form">
 			<input type="text" name="taskName" />
 			<button type="submit">Add task</button>
 		</form> -->
-		<!-- 
+	<!-- 
 		<div class="checkbox-thumb">
 			<input type="checkbox" id="checkbox" class="checkbox" />
 			<label class="theme-toggle" for="checkbox"></label>
 			<div class="checkbox-circle"></div>
 		</div> -->
 
-		<!-- <ul id="task-list"></ul> -->
+	<!-- <ul id="task-list"></ul> -->
 
-		<section class="gallery-section">
-			<div class="container">
-				<form class="search-form js-search-form">
-					<input type="text" name="query" class="search-input" />
-					<button type="submit" class="search-btn">Search</button>
-				</form>
-				<ul class="gallery"></ul>
-			</div>
-		</section>
+	<section class="gallery-section">
+		<div class="container">
+			<form class="search-form js-search-form">
+				<input type="text" name="query" class="search-input" />
+				<button type="submit" class="search-btn">Search</button>
+			</form>
+			<ul class="gallery"></ul>
+			<div id="tui-pagination-container" class="tui-pagination"></div>
+		</div>
+	</section>
 
-		<!-- <script type="module" src="./main.js"></script> -->
-		<script type="module" src="./js/gallery.js"></script>
-	</body>
+	<!-- <script type="module" src="./main.js"></script> -->
+	<script type="module" src="./js/gallery.js"></script>
+</body>
+
 </html>
